Update em módulo #Preços

--- a/Front-End/Módulo 1/3ª Semana/Trabalho Prático da 3ª Semana/index.html
+++ b/Front-End/Módulo 1/3ª Semana/Trabalho Prático da 3ª Semana/index.html
@@ -230,44 +230,39 @@
             <div class="precos">
                 <table>
                     <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td class="bg-gray"><h3>Site Básico</h3></td>
+                        <td class="bg-green"><h3 style="color: #FFF;">Site Pro</h3></td>
+                        <td class="bg-gray"><h3>Site Premium</h3></td>
                     </tr>
                     <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>Até 4 páginas</td>
+                        <td class="bg-lightgreen">Até 8 páginas</td>
+                        <td>Até 12 páginas</td>
                     </tr>
                     <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>2Gbs de armazenamento</td>
+                        <td class="bg-lightgreen">4Gbs de armazenamento</td>
+                        <td>8Gbs de armazenamento</td>
                     </tr>
                     <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>Suporte por email</td>
+                        <td class="bg-lightgreen">Suporte por email e chat</td>
+                        <td>Suporte por email, chat e telefone</td>
                     </tr>
                     <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>Formulário de contato</td>
+                        <td class="bg-lightgreen">Formulário de contato e de login</td>
+                        <td>Formulário de contato, de login e catálogo de produtos</td>
                     </tr>
                     <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>R$199,00/mês</td>
+                        <td class="bg-lightgreen">R$399,00/mês</td>
+                        <td>R$699,00/mês</td>
                     </tr>
                     <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td><a href="#precos" class="button">CONTRATAR</a></td>
+                        <td class="bg-lightgreen"><a href="#precos" class="button">CONTRATAR</a></td>
+                        <td><a href="#precos" class="button">CONTRATAR</a></td>
                     </tr>
                 </table>
             </div>
