Pequenas otimizações no código - Atividades 3 e 4

--- a/Front-End/Módulo 1/3ª Semana/Trabalho Prático da 3ª Semana/index.html
+++ b/Front-End/Módulo 1/3ª Semana/Trabalho Prático da 3ª Semana/index.html
@@ -20,10 +20,10 @@
             <h2 style="text-align: center;">Aylmer Bolzan</h2>
 
             <!--Itens de menu vertical-->
-            <p class="py1"><img src="img/sobre.svg"><a href="#sobre">SOBRE</a></p>
-            <p class="py1"><img src="img/projetos.svg"><a href="#projetos">PROJETOS</a></p>
-            <p class="py1"><img src="img/formacao.svg"><a href="#precos">PREÇOS</a></p>
-            <p class="py1"><img src="img/contato.svg"><a href="#contato">CONTATO</a></p>
+            <p class="py1"><img src="img/sobre.svg"><a href="#sobre">Sobre</a></p>
+            <p class="py1"><img src="img/projetos.svg"><a href="#projetos">Projetos</a></p>
+            <p class="py1"><img src="img/formacao.svg"><a href="#precos">Preços</a></p>
+            <p class="py1"><img src="img/contato.svg"><a href="#contato">Contato</a></p>
             <p class="pt3 social">
 
                 <!--Itens de contatos-->
@@ -194,33 +194,25 @@
                 <div class="card">
                     <img src="img/projeto1.png" alt="">
                     <h3 class="my1 p1">GoldClube.com</h3>
-                    <p class="lh3 p1">Agência de marketing de afiliação da região das montanhas capixabas que atua
-                        com produtos cosméticos, principalmente produtos capilares e emagrecedores.<br>Trabalhando com a
-                        produção
-                        de landing pages ede alta conversão focado em performance de tráfego pago, elevamos o marketing digital regional
-                        a outro
-                        nível ainda não trabalhado anteriormente.</p>
+                    <p class="lh3 p1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus rem possimus, commodi ab praesentium quasi? Voluptas autem iure harum, quisquam, sint architecto sit ea enim velit nostrum magnam eveniet beatae.</p>
                 </div>
 
                 <!--CPAPS.com.br-->
                 <div class="card mx1">
                     <img src="img/projeto3.png" alt="">
                     <h3 class="my1 p1">CPAPS.com.br</h3>
-                    <p class="lh3 p1">Atuando como Gerente de E-commerce, tive a oportunidade de, por 4 anos,
-                        estar à frente do Marketing do maior e-commerce de equipamentos respiratórios da América Latina,
-                        passando inclusive por um momento super peculiar ao negócio, que foi a pandemia do COVID-19, em
-                        que o
-                        principal tipo de equipamento necessário era comercializado pela empresa.</p>
+                    <p class="lh3 p1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus rem possimus, commodi ab praesentium quasi? Voluptas autem iure harum, quisquam, sint architecto sit ea enim velit nostrum magnam eveniet beatae.
+
+                    </p>
                 </div>
 
                 <!--Bioage.com.br-->
                 <div class="card">
                     <img src="img/projeto2.png" alt="">
                     <h3 class="my1 p1">Bioage.com.br</h3>
-                    <p class="lh3 p1">À frente da equipe Comercial e do Marketing, tive a oportunidade de implantar o
-                        e-commerce regional da franquia Bioage Vitória em Open Cart, levando a empresa a uma outra
-                        maturidade no varejo digital, quando anteriormente trabalhava somente com as redes sociais
-                        (Instagram e Facebook) e com representantes porta-a-porta e através de vendas por telefone.</p>
+                    <p class="lh3 p1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus rem possimus, commodi ab praesentium quasi? Voluptas autem iure harum, quisquam, sint architecto sit ea enim velit nostrum magnam eveniet beatae.
+
+                    </p>
                 </div>
             </div>
 
