--- a/Front-End/Módulo 1/2ª Semana/Práticas Sugeridas da Aula 11/index-bootstrap.html
+++ b/Front-End/Módulo 1/2ª Semana/Práticas Sugeridas da Aula 11/index-bootstrap.html
@@ -1,18 +1,95 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Práticas Sugeridas da Aula 11 - Bootstrap</title>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Práticas Sugeridas da Aula 11</title>
-</head>
+    <link rel="stylesheet" href="style.css" />
 
-<body>
-    <h1>Práticas Sugeridas da Aula 11</h1>
-    <hr>
-    <p class="destacado">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, officia! Quas sapiente culpa nobis vero rerum iure, aliquid doloremque voluptates aperiam id architecto a recusandae saepe sed blanditiis quos modi?</p>
-</body>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+  </head>
 
+  <body>
+    
+    <h1>Práticas Sugeridas da Aula 11 - Bootstrap</h1>
+
+    <table rules="all" width="400" cellpadding="10">
+      <tr>
+        <td class="destacado">
+          <h1>Envie-nos sua mensagem</h1>
+          <h2>Sua mensagem é muito importante</h2>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <form method="post" action="/cliente/cadastrar">
+            <label for="txtNome">Nome:</label>
+            <div class="input-group mb-3">
+              <div class="input-group-prepend">
+                <span class="input-group-text" id="basic-addon1">@</span>
+              </div>
+
+              <input
+                type="text"
+                class="form-control"
+                placeholder="Digite seu nome"
+                name="Nome"
+                id="txtNome"
+                required
+              />
+            </div>
+
+            <p>
+              <label for="txtMinibio">Deixe sua mensagem:</label><br />
+              <textarea
+                rows="10"
+                name="MiniBiografia"
+                class="form-control"
+                id="txtMinibio"
+                required
+              ></textarea>
+            </p>
+
+            <p>
+              - <strong>Aviso de Privacidade</strong><br />
+              <i>Seus dados serão enviados através de um ambiente seguro.</i>
+            </p>
+
+            <p>
+              <button type="submit" value="Enviar" class="btn btn-success">
+                Enviar
+              </button>
+            </p>
+          </form>
+        </td>
+      </tr>
+    </table>
+
+    <!-- Início de código JS do Bootstrap -->
+
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Fim de código JS do Bootstrap -->
+  </body>
 </html>
