Aula 06 - Entrada de DadosPágina

--- a/Front-End/Módulo 3/1ª Semana/index.html
+++ b/Front-End/Módulo 3/1ª Semana/index.html
@@ -1,8 +1,8 @@
 <meta charset="UTF-8" />
 
 <script>
-    
-  var salarioBruto = 7500;
+  var nome = prompt("Digite aqui o seu nome:");
+  var salarioBruto = parseFloat(prompt(nome + ", digite aqui o seu salário bruto:"));
   var ir = salarioBruto * 0.1;
   var salarioLiquido = salarioBruto - ir;
 
