Configurações iniciais do P1

--- a/FIC2 - Back-End/Módulo 2 - Páginas customizadas com Node.JS/2ª Semana/Trabalho Prático da 2ª Semana/home.html
+++ b/FIC2 - Back-End/Módulo 2 - Páginas customizadas com Node.JS/2ª Semana/Trabalho Prático da 2ª Semana/home.html
@@ -11,21 +11,36 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>SALVIA- Cosméticos Naturais</title>
+    <title>Início | SALVIA - Cosméticos Naturais</title>
   </head>
   <body>
+    <a href="#head-title"
+      ><img
+        src="https://images.tcdn.com.br/img/img_prod/780462/1679315483_banner_outono.png"
+        style="width: 100%"
+        alt="banner"
+    /></a>
     <div class="container">
       <h1 id="head-title" class="display-6 pt-5">Ofertas de Outono</h1>
-
+      <span
+        >Curadoria especial de Outono. Produtinhos especiais para essa estação
+        que pede aconchego, com descontos imperdíveis!Aproveite as nossas
+        incríveis promoções em biocosméticos. Na nossa categoria de Promoções,
+        você encontrará uma seleção de itens de alta qualidade a preços
+        imbatíveis, incluindo kits promocionais com protocolos completos. Não
+        perca a chance de economizar e ainda levar para casa produtos incríveis
+        para cuidar da sua pele, cabelo e bem-estar. Não deixe essas ofertas
+        passarem, acesse agora e aproveite.</span
+      >
       <div class="container py-5 d-flex gap-3">
-
         <div
           class="card col-8 col-sm-7 col-md-5 col-lg-4 col-xl-3 pt-3 m-auto shadow"
         >
-          <img
-            src="https://images.tcdn.com.br/img/img_prod/780462/leave_in_natural_nativa_ecocosmeticos_883_1_1ba996d5dc144e68cec6394889b3bd6c.jpg"
-            class="card-img-top"
-          />
+          <a href="/p1"
+            ><img
+              src="https://images.tcdn.com.br/img/img_prod/780462/leave_in_natural_nativa_ecocosmeticos_883_1_1ba996d5dc144e68cec6394889b3bd6c.jpg"
+              class="card-img-top"
+          /></a>
           <div class="card-body">
             <h5 class="card-title">Leave-in Natural - Nativa Ecocosméticos</h5>
             <h6 class="card-subtitle text-secondary">7898652971938</h6>
@@ -37,11 +52,11 @@
               >
             </p>
           </div>
-          <div
-            class="card-footer text-secondary d-flex justify-content-around"
-          >
+          <div class="card-footer text-secondary d-flex justify-content-around">
             <span class="fs-4 fw-medium"> R$59,90 </span>
-            <a href="/P1"><span class="btn btn-success"> COMPRAR </span></a>
+            <a href="/p1"
+              ><span class="btn btn-success"> COMPRAR </span></a
+            >
           </div>
         </div>
 
@@ -53,21 +68,21 @@
             class="card-img-top"
           />
           <div class="card-body">
-            <h5 class="card-title">Hidratante Corporal - Alecrim e Melaleuca - TERRAL            </h5>
+            <h5 class="card-title">
+              Hidratante Corporal - Alecrim e Melaleuca - TERRAL
+            </h5>
             <h6 class="card-subtitle text-secondary">7896380660117</h6>
             <p class="card-text fst-italic pt-3">
               <span
-                >“ O Hidratante Corporal Natural Alecrim e Melaleuca tem efeito anti-stress, promovendo a sensação de contato com a natureza.
-
+                >“ O Hidratante Corporal Natural Alecrim e Melaleuca tem efeito
+                anti-stress, promovendo a sensação de contato com a natureza.
                 ”</span
               >
             </p>
           </div>
-          <div
-            class="card-footer text-secondary d-flex justify-content-around"
-          >
+          <div class="card-footer text-secondary d-flex justify-content-around">
             <span class="fs-4 fw-medium"> R$76,90 </span>
-            <a href="/P2"><span class="btn btn-success"> COMPRAR </span></a>
+            <a href="/p2"><span class="btn btn-success"> COMPRAR </span></a>
           </div>
         </div>
 
@@ -79,23 +94,23 @@
             class="card-img-top"
           />
           <div class="card-body">
-            <h5 class="card-title">Creme para Pés e Pernas Natural - Livealoe
+            <h5 class="card-title">
+              Creme para Pés e Pernas Natural - Livealoe
             </h5>
             <h6 class="card-subtitle text-secondary">7898516730930</h6>
             <p class="card-text fst-italic pt-3">
               <span
-                >“ O Creme para Pés e Pernas hidrata, conforta e alívia. Ideal para massagens relaxantes, hidrata profundamente e deixa a pele com toque suave.  ”</span
+                >“ O Creme para Pés e Pernas hidrata, conforta e alívia. Ideal
+                para massagens relaxantes, hidrata profundamente e deixa a pele
+                com toque suave. ”</span
               >
             </p>
           </div>
-          <div
-            class="card-footer text-secondary d-flex justify-content-around"
-          >
+          <div class="card-footer text-secondary d-flex justify-content-around">
             <span class="fs-4 fw-medium"> R$56,91 </span>
             <a href="/P3"><span class="btn btn-success"> COMPRAR </span></a>
           </div>
         </div>
-
       </div>
     </div>
   </body>
